tests/snapshots/integration_test__log_data@075ff6920db884b5ac93d05efd22c48f.snap
---
source: tests/integration_test.rs
expression: record
info: "type=USER_START msg=audit(1481077043.170:416): pid=1298 uid=0 auid=1000 ses=1 subj=system_u:system_r:sshd_t:s0-s0:c0.c1023 msg='op=PAM:session_open grantors=pam_selinux,pam_loginuid,pam_selinux,pam_namespace,pam_keyinit,pam_keyinit,pam_limits,pam_systemd,pam_unix,pam_lastlog acct=\"andrew_kroh\" exe=\"/usr/sbin/sshd\" hostname=pool-96-241-146-97.washdc.fios.verizon.net addr=96.241.146.97 terminal=ssh res=success'"
---
{
  "record_type": "USER_START",
  "timestamp": 1481077043170,
  "id": 416,
  "fields": {
    "auid": 1000,
    "msg": {
      "acct": "andrew_kroh",
      "addr": "96.241.146.97",
      "exe": "/usr/sbin/sshd",
      "grantors": "pam_selinux,pam_loginuid,pam_selinux,pam_namespace,pam_keyinit,pam_keyinit,pam_limits,pam_systemd,pam_unix,pam_lastlog",
      "hostname": "pool-96-241-146-97.washdc.fios.verizon.net",
      "op": "PAM:session_open",
      "res": "success",
      "terminal": "ssh"
    },
    "pid": "1298",
    "ses": "1",
    "subj": "system_u:system_r:sshd_t:s0-s0:c0.c1023",
    "uid": "root"
  }
}
