tests/snapshots/integration_test__log_data@1a660950f9466ed4fc51a98695a5d6c1.snap
---
source: tests/integration_test.rs
expression: record
info: "type=ADD_USER msg=audit(1481076992.488:389): pid=1264 uid=0 auid=4294967295 ses=4294967295 subj=system_u:system_r:unconfined_service_t:s0 msg='op=add-user id=1000 exe=\"/usr/sbin/useradd\" hostname=? addr=? terminal=? res=success'"
---
{
  "record_type": "ADD_USER",
  "timestamp": 1481076992488,
  "id": 389,
  "fields": {
    "auid": null,
    "msg": {
      "addr": "?",
      "exe": "/usr/sbin/useradd",
      "hostname": "?",
      "id": 1000,
      "op": "add-user",
      "res": "success",
      "terminal": "?"
    },
    "pid": "1264",
    "ses": "4294967295",
    "subj": {
      "level": {
        "sensitivity": "s0"
      },
      "module": "SELinux",
      "role": "system_r",
      "type": "unconfined_service_t",
      "user": "system_u"
    },
    "uid": "root"
  }
}
