tests/snapshots/integration_test__log_data@1cdb62dbd82c9de98b94166a196401e6.snap
---
source: tests/integration_test.rs
expression: record
info: "type=CRED_DISP msg=audit(1481077049.058:427): pid=1298 uid=0 auid=1000 ses=1 subj=system_u:system_r:sshd_t:s0-s0:c0.c1023 msg='op=PAM:setcred grantors=pam_env,pam_unix acct=\"andrew_kroh\" exe=\"/usr/sbin/sshd\" hostname=pool-96-241-146-97.washdc.fios.verizon.net addr=96.241.146.97 terminal=ssh res=success'"
---
{
  "record_type": "CRED_DISP",
  "timestamp": 1481077049058,
  "id": 427,
  "fields": {
    "auid": "1000",
    "msg": "op=PAM:setcred grantors=pam_env,pam_unix acct=\"andrew_kroh\" exe=\"/usr/sbin/sshd\" hostname=pool-96-241-146-97.washdc.fios.verizon.net addr=96.241.146.97 terminal=ssh res=success",
    "pid": "1298",
    "ses": "1",
    "subj": "system_u:system_r:sshd_t:s0-s0:c0.c1023",
    "uid": "0"
  }
}
