tests/snapshots/integration_test__log_data@32faf15c3dbc2af52bdb2f0a9133fc9f.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/go-libaudit/audit-rhel7.log:34"
expression: result
info: "type=USER_CMD msg=audit(1481077231.363:475): pid=1382 uid=1000 auid=1000 ses=3 subj=unconfined_u:unconfined_r:unconfined_t:s0-s0:c0.c1023 msg='cwd=\"/home/andrew_kroh\" cmd=2E2F6D657472696362656174202D63206D622E6465762E796D6C terminal=pts/0 res=success'"
---
{
  "record_type": "USER_CMD",
  "timestamp": 1481077231363,
  "id": 475,
  "fields": {
    "auid": 1000,
    "msg": {
      "cmd": "./metricbeat -c mb.dev.yml",
      "cwd": "/home/andrew_kroh",
      "res": "success",
      "terminal": "pts/0"
    },
    "pid": "1382",
    "ses": "3",
    "subj": {
      "level": {
        "category": "c0.c1023",
        "sensitivity": "s0-s0"
      },
      "module": "SELinux",
      "role": "unconfined_r",
      "type": "unconfined_t",
      "user": "unconfined_u"
    },
    "uid": 1000
  }
}
