tests/snapshots/integration_test__log_data@3f2d0f20a434fcc41efa9b32026e6bde.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/go-libaudit/audit-rhel7.log:1"
expression: result
info: "type=ADD_GROUP msg=audit(1481076992.414:385): pid=1235 uid=0 auid=4294967295 ses=4294967295 subj=system_u:system_r:unconfined_service_t:s0 msg='op=add-group id=1000 exe=\"/usr/sbin/groupadd\" hostname=? addr=? terminal=? res=success'"
---
{
  "record_type": "ADD_GROUP",
  "timestamp": 1481076992414,
  "id": 385,
  "fields": {
    "auid": null,
    "msg": {
      "addr": null,
      "exe": "/usr/sbin/groupadd",
      "hostname": null,
      "id": 1000,
      "op": "add-group",
      "res": "success",
      "terminal": null
    },
    "pid": "1235",
    "ses": "4294967295",
    "subj": {
      "level": {
        "sensitivity": "s0"
      },
      "module": "SELinux",
      "role": "system_r",
      "type": "unconfined_service_t",
      "user": "system_u"
    },
    "uid": "root"
  }
}
