tests/snapshots/integration_test__log_data@42d860d079bab5a6471a31942fbf19b0.snap
---
source: tests/integration_test.rs
expression: record
info: "type=USER_MGMT msg=audit(1481076992.521:393): pid=1264 uid=0 auid=4294967295 ses=4294967295 subj=system_u:system_r:unconfined_service_t:s0 msg='op=add-home-dir id=1000 exe=\"/usr/sbin/useradd\" hostname=? addr=? terminal=? res=success'"
---
{
  "record_type": "USER_MGMT",
  "timestamp": 1481076992521,
  "id": 393,
  "fields": {
    "auid": "4294967295",
    "msg": {
      "addr": "?",
      "exe": "/usr/sbin/useradd",
      "hostname": "?",
      "id": "1000",
      "op": "add-home-dir",
      "res": "success",
      "terminal": "?"
    },
    "pid": "1264",
    "ses": "4294967295",
    "subj": "system_u:system_r:unconfined_service_t:s0",
    "uid": "0"
  }
}
